Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 <p>Therefore, predicting such costs with accuracy is a significant first step in address this problem, and may reveal insights into the nature of the key drivers of costs.</p>
 
-<h3>
-<a id="our-goals-were" class="anchor" href="#our-goals-were" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Our Goals were</h3>
+<h4>
+<a id="goals" class="anchor" href="#goals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Goals</h4>
 
 <p>1) to utilize regression-based methods and modern machine learning techniques to identify high-cost patients and predict their cost of care based on past year cost data and medical information (we define high cost patient as Medicare beneficiaries in MA with top 10% most expensive spending under Medicare part A and B coverage); </p>
 
@@ -67,30 +67,36 @@
 
 <p>Task: What visualizations did you use to look at your data in different ways? What are the different statistical methods you considered? Justify the decisions you made, and show any major changes to your ideas. How did you reach these conclusions?</p>
 
-<h3>
-<a id="modeling" class="anchor" href="#modeling" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Modeling</h3>
+<h4>
+<a id="modeling" class="anchor" href="#modeling" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Modeling</h4>
+
+<h5>
+<a id="prediction" class="anchor" href="#prediction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Prediction</h5>
+
+<ul>
+<li>Logistic Regression </li>
+<li>Naive Bayes Classification </li>
+<li>Decision Tree</li>
+<li>Support Vector Machine </li>
+<li>Linear Discriminative Analysis or Quadratic Discriminative Analysis</li>
+<li>Random Forest</li>
+</ul>
+
+<h5>
+<a id="identifying-influential-features" class="anchor" href="#identifying-influential-features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Identifying influential features.</h5>
+
+<ul>
+<li>Feature Selection or Dimension Reduction(Principal Component Analysis) </li>
+</ul>
 
 <h4>
-<a id="objective-1-to-predict-high-cost-patients-versus-non-high-cost-patients-we-will-compare-several-regression-and-machine-learning-methods" class="anchor" href="#objective-1-to-predict-high-cost-patients-versus-non-high-cost-patients-we-will-compare-several-regression-and-machine-learning-methods" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Objective 1: To predict high cost patients versus non-high cost patients. We will compare several regression and machine learning methods.</h4>
+<a id="analysis" class="anchor" href="#analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Analysis</h4>
 
-<p>Logistic Regression 
-Naive Bayes Classification 
-Decision Tree
-Support Vector Machine 
-Linear Discriminative Analysis or Quadratic Discriminative Analysis
-Random Forest</p>
-
-<h4>
-<a id="objective-2-to-identify-features-that-are-most-influential-in-determining-which-patients-will-be-high-cost" class="anchor" href="#objective-2-to-identify-features-that-are-most-influential-in-determining-which-patients-will-be-high-cost" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Objective 2: To identify features that are most influential in determining which patients will be high cost.</h4>
-
-<p>Feature Selection or Dimension Reduction(Principal Component Analysis) </p>
-
-<h3>
-<a id="analysis" class="anchor" href="#analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Analysis</h3>
-
-<p>Choose performance metrics 
-Compare performance of the different methods through cross-validation
-Test model sensitivity to changes in input / assumptions</p>
+<ul>
+<li>Choose performance metrics </li>
+<li>Compare performance of the different methods through cross-validation</li>
+<li>Test model sensitivity to changes in input / assumptions</li>
+</ul>
 
 <h2>
 <a id="final-analysis-and-predictions" class="anchor" href="#final-analysis-and-predictions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Final Analysis and Predictions</h2>
