Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,11 +41,6 @@
 <p>3) to identify the factors that are most influential in determining which patients will be high cost.</p>
 
 <h2>
-<a id="related-work" class="anchor" href="#related-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Related Work</h2>
-
-<p>Task: Anything that inspired you, such as a paper, a web site, or something we discussed in class.</p>
-
-<h2>
 <a id="initial-questions" class="anchor" href="#initial-questions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Initial Questions</h2>
 
 <p>Task: What questions are you trying to answer? How did these questions evolve over the course of the project? What new questions did you consider in the course of your analysis?</p>
@@ -70,8 +65,7 @@
 <h4>
 <a id="modeling" class="anchor" href="#modeling" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Modeling</h4>
 
-<h5>
-<a id="prediction" class="anchor" href="#prediction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Prediction</h5>
+<p><strong>Prediction</strong></p>
 
 <ul>
 <li>Logistic Regression </li>
@@ -82,8 +76,7 @@
 <li>Random Forest</li>
 </ul>
 
-<h5>
-<a id="identifying-influential-features" class="anchor" href="#identifying-influential-features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Identifying influential features.</h5>
+<p><strong>Identifying influential features</strong></p>
 
 <ul>
 <li>Feature Selection or Dimension Reduction(Principal Component Analysis) </li>
@@ -105,13 +98,18 @@
 Summarize and Visualize the highly influential factors from different predictive models
 If we have time, maybe we can see how variable this is, e.g., between different demographics or years</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h4>
+<a id="related-work" class="anchor" href="#related-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Related Work</h4>
+
+<p>Task: Anything that inspired you, such as a paper, a web site, or something we discussed in class.</p>
+
+<h4>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h4>
 
 <p>This project was created by Xiner (<a href="https://github.com/xz2315" class="user-mention">@xz2315</a>), Shirley(<a href="https://github.com/shirley-g" class="user-mention">@shirley-g</a>), and Paula (<a href="https://github.com/paulaj" class="user-mention">@paulaj</a>) for  BIO 260 and CSCI E107. </p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h4>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h4>
 
 <p>Want to know more about this project? Check out our <a href="https://github.com/Xiner-Shirley-Paula/DataScienceFinalProject">documentation</a> or email <a href="mailto:paula.jacobso@gmail.com">paula.jacobso@gmail.com</a></p>
 
