Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
 
 <p>Therefore, predicting such costs with accuracy is a significant first step in address this problem, and may reveal insights into the nature of the key drivers of costs.</p>
 
-<h4>
-<a id="goals" class="anchor" href="#goals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Goals</h4>
-
-<p>1) to utilize regression-based methods and modern machine learning techniques to identify high-cost patients and predict their cost of care based on past year cost data and medical information (we define high cost patient as Medicare beneficiaries in MA with top 10% most expensive spending under Medicare part A and B coverage); </p>
+<p><strong>Our goals were to:</strong>
+1) to utilize regression-based methods and modern machine learning techniques to identify high-cost patients and predict their cost of care based on past year cost data and medical information (we define high cost patient as Medicare beneficiaries in MA with top 10% most expensive spending under Medicare part A and B coverage); </p>
 
 <p>2) to obtain more accurate prediction by dividing health cost into buckets (potentially 5 buckets) from high to low, and predict patients most likely cost buckets in the second year based on past year cost data and medical information;</p>
 
@@ -107,11 +105,6 @@ If we have time, maybe we can see how variable this is, e.g., between different 
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h4>
 
 <p>This project was created by Xiner (<a href="https://github.com/xz2315" class="user-mention">@xz2315</a>), Shirley(<a href="https://github.com/shirley-g" class="user-mention">@shirley-g</a>), and Paula (<a href="https://github.com/paulaj" class="user-mention">@paulaj</a>) for  BIO 260 and CSCI E107. </p>
-
-<h4>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h4>
-
-<p>Want to know more about this project? Check out our <a href="https://github.com/Xiner-Shirley-Paula/DataScienceFinalProject">documentation</a> or email <a href="mailto:paula.jacobso@gmail.com">paula.jacobso@gmail.com</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Xiner-Shirley-Paula/DataScienceFinalProject">Predicting High Cost Patients</a> is maintained by <a href="https://github.com/Xiner-Shirley-Paula">Xiner-Shirley-Paula</a>.</span>
