Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Predicting High Cost Patients</h1>
-      <h2 class="project-tagline">Our Final Project for  Introduction to Data Science: BIO 260 and CSCI E107</h2>
+      <h2 class="project-tagline">A Data Science Project </h2>
       <a href="https://github.com/Xiner-Shirley-Paula/DataScienceFinalProject" class="btn">View on GitHub</a>
       <a href="https://github.com/Xiner-Shirley-Paula/DataScienceFinalProject/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Xiner-Shirley-Paula/DataScienceFinalProject/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h1>
+      <h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>This project was created by Xiner (<a href="https://github.com/xz2315" class="user-mention">@xz2315</a>), Shirley(<a href="https://github.com/shirley-g" class="user-mention">@shirley-g</a>), and Paula (<a href="https://github.com/paulaj" class="user-mention">@paulaj</a>) for  BIO 260 and CSCI E107. </p>
 
 <h2>
 <a id="overview-and-motivation" class="anchor" href="#overview-and-motivation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Overview and Motivation</h2>
@@ -38,6 +38,9 @@
 
 <p>3) to identify the factors that are most influential in determining which patients will be high cost.</p>
 
+<p><strong>Related Work</strong>
+Task: Anything that inspired you, such as a paper, a web site, or something we discussed in class.</p>
+
 <h2>
 <a id="initial-questions" class="anchor" href="#initial-questions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Initial Questions</h2>
 
@@ -50,10 +53,8 @@
 
 <p>The original data source comes from Medicare Claims Data Set (from Centers for Medicare and Medicaid). The original data files we derived our analytic dataset from included: Denominator File, Inpatient File, Outpatient Fil, Carrier File, Skilled Nursing Facility File, Hospice File, Home Health Agency File, and Durable Medical Equipment File. They cover all medical claims and associated costs for Medicare FFS beneficiaries, except drugs which we did not incorporate into our analyses, because we are interested in medical cost only. </p>
 
-<h3>
-<a id="data-preparation" class="anchor" href="#data-preparation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Data preparation</h3>
-
-<p>We used a 20% sample of Massachusetts Medicare Fee-For-Service Beneficiaries and claims associated with them in 2012 and 2013 (2011 is our first year and 2012 is our second year). We did not have individual identifiable information. Since the original dataset was at claim-level, we had to do some pre-processing and wrangling to get our final dataset, which is at beneficiary-level (or patient-level). Our analytic dataset will includes the following information: Diagnosis Clinical Classification, Procedure Clinical Classification, Medical utilizations (hospitalization, outpatient visits, physician visits, and more detailed utilization categories), Medical costs (in each setting), patient age, patient gender, and patient race. These were our features for prediction.</p>
+<p><strong>Data preparation</strong>
+We used a 20% sample of Massachusetts Medicare Fee-For-Service Beneficiaries and claims associated with them in 2012 and 2013 (2011 is our first year and 2012 is our second year). We did not have individual identifiable information. Since the original dataset was at claim-level, we had to do some pre-processing and wrangling to get our final dataset, which is at beneficiary-level (or patient-level). Our analytic dataset will includes the following information: Diagnosis Clinical Classification, Procedure Clinical Classification, Medical utilizations (hospitalization, outpatient visits, physician visits, and more detailed utilization categories), Medical costs (in each setting), patient age, patient gender, and patient race. These were our features for prediction.</p>
 
 <h2>
 <a id="exploratory-analysis" class="anchor" href="#exploratory-analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exploratory Analysis</h2>
@@ -95,16 +96,6 @@
 <p>Task: What did you learn about the data? How did you answer the questions? How can you justify your answers?
 Summarize and Visualize the highly influential factors from different predictive models
 If we have time, maybe we can see how variable this is, e.g., between different demographics or years</p>
-
-<h4>
-<a id="related-work" class="anchor" href="#related-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Related Work</h4>
-
-<p>Task: Anything that inspired you, such as a paper, a web site, or something we discussed in class.</p>
-
-<h4>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h4>
-
-<p>This project was created by Xiner (<a href="https://github.com/xz2315" class="user-mention">@xz2315</a>), Shirley(<a href="https://github.com/shirley-g" class="user-mention">@shirley-g</a>), and Paula (<a href="https://github.com/paulaj" class="user-mention">@paulaj</a>) for  BIO 260 and CSCI E107. </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Xiner-Shirley-Paula/DataScienceFinalProject">Predicting High Cost Patients</a> is maintained by <a href="https://github.com/Xiner-Shirley-Paula">Xiner-Shirley-Paula</a>.</span>
