Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+      <h2>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h2>
 
 <p>This project was created by Xiner (<a href="https://github.com/xz2315" class="user-mention">@xz2315</a>), Shirley(<a href="https://github.com/shirley-g" class="user-mention">@shirley-g</a>), and Paula (<a href="https://github.com/paulaj" class="user-mention">@paulaj</a>) for  BIO 260 and CSCI E107. </p>
 
@@ -32,11 +32,9 @@
 <p>Therefore, predicting such costs with accuracy is a significant first step in address this problem, and may reveal insights into the nature of the key drivers of costs.</p>
 
 <p><strong>Our goals were to:</strong>
-1) to utilize regression-based methods and modern machine learning techniques to identify high-cost patients and predict their cost of care based on past year cost data and medical information (we define high cost patient as Medicare beneficiaries in MA with top 10% most expensive spending under Medicare part A and B coverage); </p>
-
-<p>2) to obtain more accurate prediction by dividing health cost into buckets (potentially 5 buckets) from high to low, and predict patients most likely cost buckets in the second year based on past year cost data and medical information;</p>
-
-<p>3) to identify the factors that are most influential in determining which patients will be high cost.</p>
+1. to utilize regression-based methods and modern machine learning techniques to identify high-cost patients and predict their cost of care based on past year cost data and medical information (we define high cost patient as Medicare beneficiaries in MA with top 10% most expensive spending under Medicare part A and B coverage); 
+2. to obtain more accurate prediction by dividing health cost into buckets (potentially 5 buckets) from high to low, and predict patients most likely cost buckets in the second year based on past year cost data and medical information;
+3. to identify the factors that are most influential in determining which patients will be high cost.</p>
 
 <p><strong>Related Work</strong>
 Task: Anything that inspired you, such as a paper, a web site, or something we discussed in class.</p>
