Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@ We used a 20% sample of Massachusetts Medicare Fee-For-Service Beneficiaries and
 
 <p>Task: What visualizations did you use to look at your data in different ways? What are the different statistical methods you considered? Justify the decisions you made, and show any major changes to your ideas. How did you reach these conclusions?</p>
 
-<h4>
-<a id="modeling" class="anchor" href="#modeling" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Modeling</h4>
-
-<p><strong>Prediction</strong></p>
+<p><strong>Modeling - Prediction</strong></p>
 
 <ul>
 <li>Logistic Regression </li>
@@ -73,14 +70,13 @@ We used a 20% sample of Massachusetts Medicare Fee-For-Service Beneficiaries and
 <li>Random Forest</li>
 </ul>
 
-<p><strong>Identifying influential features</strong></p>
+<p><strong>Modeling - Identifying influential features</strong></p>
 
 <ul>
 <li>Feature Selection or Dimension Reduction(Principal Component Analysis) </li>
 </ul>
 
-<h4>
-<a id="analysis" class="anchor" href="#analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Analysis</h4>
+<p><strong>Analysis</strong></p>
 
 <ul>
 <li>Choose performance metrics </li>
